--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/cli": "^8.0.1",
+    "@capacitor/core": "^8.0.1",
     "@supabase/supabase-js": "^2.87.1",
     "echarts": "^6.0.0",
     "element-plus": "^2.12.0",
@@ -18,7 +20,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "sass": "^1.96.0",
+    "tailwindcss": "^4.1.18",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "overrides": {
